--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #e2edff;
+  background-color: #6C757D;
 }
 
 #projects {
-  background-color: #e2edff;
+  background-color: #343A40;
 }
 
 section {
